maybe working checkout

--- a/Final Project 335/templates/checkOut.ejs
+++ b/Final Project 335/templates/checkOut.ejs
@@ -6,6 +6,13 @@
     <title>Select Profile</title>
 </head>
 <body>
+
+    <h1>Check Out Books</h1>
+
+    <h2>Current Books Available: </h2>
+    <%- booksAvailable %>
+    
+
     
         <form action="http://localhost:<%- portNumber %>/selectProfile" method="post">
             <input type="text" name="username">
