I added the API part

--- a/Final Project 335/templates/userActions.ejs
+++ b/Final Project 335/templates/userActions.ejs
@@ -28,17 +28,15 @@
               <label for="searchBook">Search for a Book</label>
             </div>
 
-
-
-            <input type="text" id="test" >
-          
+            <div>
+              <input type="radio" id="searchBookAPI" name="userSelection" value="searchBookAPI" />
+              <label for="searchBookAPI">Search for a Book in Open Library</label>
+            </div>
             
           </fieldset>
 
     <input type="submit" id="submit" value="Submit"> 
 </form>
   
-
-    
 </body>
 </html>
