--- a/templates/checkedOutConfirmation.ejs
+++ b/templates/checkedOutConfirmation.ejs
@@ -9,6 +9,9 @@
 
    <h1>Thank you! These are the books you checked out: </h1>
     <%- checkedOut %>
+
+    <a href="http://localhost:<%- portNumber %>/">Return Home</a>
+
     
 </body>
 </html>
