--- a/templates/searchBookAPI.ejs
+++ b/templates/searchBookAPI.ejs
@@ -6,6 +6,9 @@
     <title>Search Books Using Open Library API</title>
 </head>
 <body>
+    <a href="http://localhost:<%- portNumber %>/">Return Home</a>
+
+    
     <form action="/searchBookAPI" method="post" id="apiSearchForm">
         <label for="apiInput">Enter Book Title: </label>
         <input type="text" id="apiInput" name="bookTitleAPI" required>
