--- a/templates/librarianActions.ejs
+++ b/templates/librarianActions.ejs
@@ -32,7 +32,8 @@
 
     <input type="submit" id="submit" value="Submit"> 
 </form>
-  
+<a href="http://localhost:<%- portNumber %>/">Return Home</a>
+
 
     
 
