--- a/templates/searchBookAPI.ejs
+++ b/templates/searchBookAPI.ejs
@@ -6,6 +6,7 @@
     <title>Search Books Using Open Library API</title>
 </head>
 <body>
+    <h1>Open Library API: Explore Books Available Outside Our Library</h1>
     <a href="http://localhost:<%- portNumber %>/">Return Home</a>
 
     
