--- a/templates/librarianActions.ejs
+++ b/templates/librarianActions.ejs
@@ -6,7 +6,7 @@
     <title>Librarian Actions</title>
 </head>
 <body>
-    <h1>Welcome to the library NAME !</h1>
+    <h1>Welcome to the library!</h1>
 
     
     <form action="/librarianActions" method="post" id="identityType"> 
