--- a/templates/searchbook.ejs
+++ b/templates/searchbook.ejs
@@ -7,6 +7,7 @@
 </head>
 <body>
 
+    <h1>Search for a Book (Within Our Library)</h1>
     <form action="http://localhost:<%- portNumber %>/searchBook" method="post">
         Search for Title: <input type="text" name="bookTitle" id="title">
         Search for Author: <input type="text" name="bookAuthor" id="author">
