--- a/templates/userActions.ejs
+++ b/templates/userActions.ejs
@@ -6,7 +6,7 @@
     <title>Actions</title>
 </head>
 <body>
-    <h1>Welcome to the library NAME !</h1>
+    <h1>Welcome to the library!</h1>
 
     
     <form action="/userActions" method="post" id="identityType"> 
