delete all books in library functionality added

--- a/templates/checkOut.ejs
+++ b/templates/checkOut.ejs
@@ -14,6 +14,7 @@
     
         <form action="http://localhost:<%- portNumber %>/checkOutConfirmation" method="post">
            
+            <h2>Books Available for Check-out</h2>
             <select name="itemsSelected" multiple>
 				<%- items %>
 			</select>
