--- a/templates/removeBook.ejs
+++ b/templates/removeBook.ejs
@@ -17,6 +17,12 @@
 
     </form>
 
+    <form action="http://localhost:<%- portNumber %>/removeAllBooks" method="post">
+        
+        
+        <input type="submit" id="submitButton" value="Remove All Books In Library"> 
+
+    </form>
     <div id="resultBox">
         <%- status %>
     </div>
