--- a/templates/removeBook.ejs
+++ b/templates/removeBook.ejs
@@ -9,6 +9,10 @@
 
     <h1>Remove All Copies of Book Title/Author</h1>
     
+    <a href="http://localhost:<%- portNumber %>/">Return Home</a>
+
+    
+    <h2>Remove Single Book</h2>
     <form action="http://localhost:<%- portNumber %>/removeBook" method="post">
         Book Title: <input type="text" id="bookTitle" name="bookTitle">
         Book Author: <input type="text" id="bookAuthor" name="bookAuthor">
@@ -17,12 +21,13 @@
 
     </form>
 
+    <h2>Remove All Books</h2>
     <form action="http://localhost:<%- portNumber %>/removeAllBooks" method="post">
-        
-        
         <input type="submit" id="submitButton" value="Remove All Books In Library"> 
-
     </form>
+
+    <h1>Status: </h1>
+
     <div id="resultBox">
         <%- status %>
     </div>
