--- a/templates/userActions.ejs
+++ b/templates/userActions.ejs
@@ -8,7 +8,8 @@
 <body>
     <h1>Welcome to the library!</h1>
 
-    
+    <a href="http://localhost:<%- portNumber %>/">Return Home</a>
+
     <form action="/userActions" method="post" id="identityType"> 
         <fieldset>
             <legend>What would you like to do? </legend>
