clarified menu options

--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -23,7 +23,7 @@
           
             <div>
               <input type="radio" id="user" name="userSelection" value="user" />
-              <label for="user">Library User</label>
+              <label for="user">Library User (Library Patron) </label>
             </div>
           
             
