--- a/templates/userActions.ejs
+++ b/templates/userActions.ejs
@@ -31,7 +31,7 @@
 
             <div>
               <input type="radio" id="searchBookAPI" name="userSelection" value="searchBookAPI" />
-              <label for="searchBookAPI">Search for a Book in Open Library</label>
+              <label for="searchBookAPI">Search for a Book in Open Library API</label>
             </div>
             
           </fieldset>
