clarified menu options

--- a/templates/userActions.ejs
+++ b/templates/userActions.ejs
@@ -21,7 +21,7 @@
 
             <div>
               <input type="radio" id="editReadingList" name="userSelection" value="editReadingList" />
-              <label for="editReadingList">Edit/View Reading List</label>
+              <label for="editReadingList">Checkout Books</label>
             </div>
 
             <div>
