our names and README.txt

--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -32,4 +32,10 @@
     <input type="submit" id="submit" value="Submit"> 
 </form>
 </body>
+
+<footer>
+  <p>Created by: Arthur Liao, Belen Desta, Justin Zhang</p>
+  
+</footer>
+
 </html>
