--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -1,9 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+  <style>body{
+    border: 0.5rem solid green;
+    color:red;
+}
+legend{
+    color:red;
+}
+h1{
+    color:red
+}</style>
+
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Library</title>
+
+
 </head>
 <body>
 
