--- a/templates/searchbook.ejs
+++ b/templates/searchbook.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Search for a Book</title>
+    <!-- changed name-->
 </head>
 <body>
 
