--- a/templates/checkOut.ejs
+++ b/templates/checkOut.ejs
@@ -12,7 +12,7 @@
     <h2>Current Books Available: </h2>
     <%- booksAvailable %>
     
-        <form action="http://localhost:<%- portNumber %>/checkOutConfirmation" method="post">
+        <form action="/checkOutConfirmation" method="post">
            
             <h2>Books Available for Check-out</h2>
             <select name="itemsSelected" multiple>
