--- a/templates/searchBook.ejs
+++ b/templates/searchBook.ejs
@@ -9,7 +9,7 @@
 <body>
 
     <h1>Search for a Book (Within Our Library)</h1>
-    <form action="https://test2-t7c9.onrender.com/searchBook" method="post">
+    <form action="https://test3-lk3e.onrender.com/searchBook" method="post">
         Search for Title: <input type="text" name="bookTitle" id="title">
         Search for Author: <input type="text" name="bookAuthor" id="author">
 
