--- a/templates/librarianActions.ejs
+++ b/templates/librarianActions.ejs
@@ -8,7 +8,7 @@
 <body>
     <h1>Welcome to the library!</h1>
 
-    <a href="http://localhost:<%- portNumber %>/">Return Home</a>
+    <a href="/">Return Home</a>
 
     <form action="/librarianActions" method="post" id="identityType"> 
         <fieldset>
