update home links

--- a/templates/checkedOutConfirmation.ejs
+++ b/templates/checkedOutConfirmation.ejs
@@ -10,7 +10,7 @@
    <h1>Thank you! These are the books you checked out: </h1>
     <%- checkedOut %>
 
-    <a href="http://localhost:<%- portNumber %>/">Return Home</a>
+    <a href="/">Return Home</a>
 
     
 </body>
