--- a/templates/removeBook.ejs
+++ b/templates/removeBook.ejs
@@ -9,7 +9,7 @@
 
     <h1>Remove All Copies of Book Title/Author</h1>
     
-    <a href="http://localhost:<%- portNumber %>/">Return Home</a>
+    <a href="/">Return Home</a>
 
     
     <h2>Remove Single Book</h2>
