--- a/templates/searchBookAPI.ejs
+++ b/templates/searchBookAPI.ejs
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Open Library API: Explore Books Available Outside Our Library</h1>
-    <a href="http://localhost:<%- portNumber %>/">Return Home</a>
+    <a href="/">Return Home</a>
 
     
     <form action="/searchBookAPI" method="post" id="apiSearchForm">
