--- a/templates/viewCatalog.ejs
+++ b/templates/viewCatalog.ejs
@@ -12,7 +12,7 @@
 
     <%- catalogTable %>
     
-    <a href="http://localhost:<%- portNumber %>/">Return Home</a>
+    <a href="/">Return Home</a>
 
     
 </body>
