--- a/templates/checkOut.ejs
+++ b/templates/checkOut.ejs
@@ -22,7 +22,8 @@
             <input type="submit"> 
         </form>
 
-        <a href="http://localhost:<%- portNumber %>/">Return Home</a>
+        <a href="/">Return Home</a>
+
 
     
    
