--- a/templates/searchBook.ejs
+++ b/templates/searchBook.ejs
@@ -19,7 +19,7 @@
     <%- result %> 
 
    <!-- <a href="http://localhost:<%- portNumber %>/">Return Home</a>-->
-   <a href="https://test2-t7c9.onrender.com/">Return Home</a>
+   <a href="/">Return Home</a>
 
     
 </body>
