--- a/templates/userActions.ejs
+++ b/templates/userActions.ejs
@@ -3,6 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
+  <style>body{
+    border: 0.5rem solid rgb(210, 14, 76);
+    color:red;
+}
+legend{
+    color:rgb(69, 34, 227);
+}
+h1{
+    color:rgb(167, 25, 228)
+}</style>
+
     <title>Actions</title>
 </head>
 <body>
