--- a/templates/librarianActions.ejs
+++ b/templates/librarianActions.ejs
@@ -3,6 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <style>body{
+      border: 0.5rem solid rgb(14, 171, 210);
+      color:rgb(59, 220, 124);
+  }
+  legend{
+      color:rgb(69, 34, 227);
+  }
+  h1{
+      color:rgb(228, 25, 49)
+  }</style>
+
     <title>Librarian Actions</title>
 </head>
 <body>
