--- a/templates/viewCatalog.ejs
+++ b/templates/viewCatalog.ejs
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="refresh" content="1">
 
+    <style>body{
+        border: 0.5rem solid rgb(210, 184, 14);
+       
+    }
+    </style>
+
+
     <title>Library Catalog</title>
 </head>
 <body>
