added youtube link

--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -50,6 +50,7 @@ h1{
 
 <footer>
   <p>Created by: Arthur Liao, Belen Desta, Justin Zhang</p>
+  YouTube Demo of our Project: <a href="https://youtu.be/LD7VHvsIXpQ">https://youtu.be/LD7VHvsIXpQ</a>
   
 </footer>
 
